Bug 361661 - Long delay to update canvas after deleting a layer
Summary: Long delay to update canvas after deleting a layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 3.0 Alpha
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2016-04-12 12:05 UTC by David REVOY
Modified: 2016-04-26 14:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2016-04-12 12:05:04 UTC
Hi, 3.0alpha is slower for deleting layer. The deleted layer keeps visible on canvas almost 1s after deleting them. There is a long delay to update canvas after deleting a layer.

To reproduce:
===========
1. Open a new document
2. Create two or three random paint-layer, with random colored stroke on them
3. In the layer-docker ; use the 'trashcan' icon to delete a layer. 

Result:
======
After pressing the 'trashcan' icon, the layer disapears on the stack, but the content of layer is still visible on canvas. It disapears only after around 1second. This behavior invited me to accidentally delete more layer than necessary on a big stack. 

Expected:
========
Can Layer node disappears from the stack at same time as the content on canvas?
Comment 1 wolthera 2016-04-12 14:50:11 UTC
This behaviour is a side-effect of the update lag instantiated to increase speediness of creating and manipulating layers.
Comment 2 Halla Rempt 2016-04-16 13:51:33 UTC
https://phabricator.kde.org/T2301
Comment 3 Dmitry Kazakov 2016-04-26 14:48:37 UTC
Git commit 2051a35e295c3a10e10b772aae301adf0ab1894c by Dmitry Kazakov.
Committed on 26/04/2016 at 13:58.
Pushed by dkazakov into branch 'master'.

Fix delay on removing/moving a layer

Now the signal compressor has a special mode:
FIRST_ACTIVE_POSTPONE_NEXT, in this mode it ensures that the
first signal in emitted instantly, but the following signals
are postponed until the flow of signals calms down to the
specified timeout.

In term of layer deletion it means:

1) If you remove a single layer, you'll see that result immediately.
2) If you press the remove button multiple times, you'll see the
   result only after you stop clicking the mouse button.

Fixes T2301

M  +4    -0    libs/image/kis_signal_compressor.cpp
M  +8    -0    libs/image/kis_signal_compressor.h
M  +12   -17   libs/ui/kis_node_juggler_compressed.cpp
M  +4    -1    libs/ui/kis_node_juggler_compressed.h
M  +1    -1    libs/ui/kis_node_manager.cpp

http://commits.kde.org/krita/2051a35e295c3a10e10b772aae301adf0ab1894c