Fix delay on removing/moving a layer

Now the signal compressor has a special mode:
FIRST_ACTIVE_POSTPONE_NEXT, in this mode it ensures that the
first signal in emitted instantly, but the following signals
are postponed until the flow of signals calms down to the
specified timeout.

In term of layer deletion it means:

1) If you remove a single layer, you'll see that result immediately.
2) If you press the remove button multiple times, you'll see the
   result only after you stop clicking the mouse button.

Fixes T2301
BUG:361661